@@ -7,3 +7,4 @@ ggplot2 0.8.8 (2010-XX-XX) ----------------------------------------
 * check all axis labels for expressions (reported by Benji Oswald)
 * geom_errobarh now respects height parameter
 * stat_smooth now uses built-in confidence interval (with small sample correction) for linear models (thanks to suggestion by Ian Fellows)
+* stat_qq has new dparam parameter for specifying distribution parameters (thanks to Yunfeng Zhang for the bug report)
